src/lmcc/public/css/right.css
/* #button_breadcrumbs {
	position: relative;
	background-color: #08d;
	font-family: Source Code Pro, Courier;
	margin-top: 5%;
	left: 5%;
} */

.EV_minimap_text {
    position: absolute;
    visibility: hidden;
    padding: 0.2vh 0.2vw;
    background-color: #444;
    border-radius: 20%;
    font-size: 2vh;
    border: #111;
    top: 10%;
    left: 10%;
}

.current-dot1:hover #EV1_minimap_text {
    visibility: visible;
}

.current-dot2:hover #EV2_minimap_text {
    visibility: visible;
}

.switch {
	/* Adjustments for right page */
	margin-left: 5%;

	/* border: 0.5vh solid rgb(161, 54, 154); */

  }

/* Geo info panel */
#panel_geo {
	/* flex-direction: column; */
	/* position: fixed; */

	bottom: 0%;
	top: 50%;
	right: 0%;
	height: 50%;
	width: 33%;
	/* background-color: #88c; */
	background-image: linear-gradient(to top left,#33426b, #161c56);


	/* align-items: center;
	justify-content: space-around; */
	/* border: 0.5vh solid rgb(209, 173, 173); */

}

/* THE PANEL THAT CONTAINS BOTH LISTS */
#panel_lists {
	/*
	display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    */
    height: 58%; 
    overflow: hidden; /* Prevent overflow outside this container */

	/* border: 0.5vh solid rgb(27, 143, 175); */

}
/* Panel that contains the buttons and list of geopins created */
#custom_pin_panel {
	display: inline-block;
    width: 50%; /* Adjust the width to fit side by side */
    height: 90%; /* Take up full height of the parent container */
    overflow: auto; /* Make it scrollable */
	background-image: linear-gradient(to bottom right,#737f9d, #5e6394);
	border: 0.2vh solid #454b8f;
	left: 0%;

    /* border: 0.5vh solid rgb(86, 174, 115); */
}

#geopin_title{
	position: sticky;
	background-image: linear-gradient(to bottom right,#33426b, #161c56);
	border: 0.2vh solid #454b8f;
	width: 100%;
}


#geo_pin_list_panel{
	height: calc(100% - 40px); /* Adjust the height based on the title's height */
    overflow: auto; 
	position: relative;
	/* border: 0.1vh solid rgb(64, 59, 95); */

}

#geo_pin_list {
	overflow: auto;
	list-style-position: inside; /* Moves the bullet points inside the padding area */
    padding-left: 10px; /* Adjust this value as needed */

	/* border: 0.5vh solid rgb(255, 211, 79); */


}
/* styling for list items */
#geo_pin_list li {
	padding: 0.4vh 0.4vw;
	width: 85%;
	font-family: Source Code Pro, Courier;
	font-size: small;
	border-bottom: 1px solid black;


}

/* Button for creating geo pin */


#geopin_input_panel {
	flex-flow: row wrap;
	align-items: center;
	justify-content: left;
    /* background-color: rgb(116, 116, 175); */

	/* align-content: flex-end; */
	/* gap: 10px; */

	padding-bottom: 1em;
	margin-left: 1em;
	margin-right: 1em;


}

#pinX {
	/* position: relative;
	left: 5%;
	flex: 1; */
}

#pinY {
	/* position: relative;
	left: 5%;
	flex: 1; */
}

/* BREAD CRUMBS */


/* Panel that contains the list of breadcrumbs created */
#breadcrumb_panel {
	display: inline-block;
	float: right;
	/* display: flex;
	flex-direction: column;*/
    width: 45%; /* Adjust the width to fit side by side */
    height: 90%; /* Take up full height of the parent container */
    overflow: auto; /* Make it scrollable */
    /* background-color: rgb(116, 116, 175); */
	background-image: linear-gradient(to bottom right,#737f9d, #5e6394);
	border: 0.2vh solid #454b8f;
	align-items: center;

	


    /* border: 0.3vh solid rgb(255, 85, 85); */

}

#pathfinder_title{
	position: sticky;
	background-image: linear-gradient(to bottom right,#33426b, #161c56);
	border: 0.2vh solid #454b8f;
	width: 100%;
}

#selectedPin {
 	position: relative;
	width: 95%;
	font-family: Source Code Pro, Courier;
	text-align: center;
	margin-top: 5%;
}

/* holds both eva 1 and eva2 lists within the breadcrumbs panel*/
#breadcrumb_list_inner_panel{
	height: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content:center;	
	overflow: hidden;
	/* border: 0.3vh solid rgb(255, 85, 85); */

}


#navigation_panel{
	display: flex;
	justify-content: center;
	align-items: center;
}


.menubutton {
	position: relative;
    border: 2px solid #88c;
    border-radius: 4px;
    background-color: #669;
    color: #eee;
    width: 45%;
}

#navigateButton {
	display: inline-block;
    float: right;
}

#clearnavButton {
    left: 50%;
    transform: translate(-50%, 0%);
}

#button_geopincreate {
	/* font-family: Source Code Pro, Courier; */
	/* text-align: center; */
	/* margin-top: 5%;
	left: 5%; */
	/* align-self: flex-end;*/
}

#capture_pic_ev {
	position: relative;
    border: 2px solid #88c;
    border-radius: 4px;
    background-color: #669;
    color: #eee;
}

#control_notes {
	position: absolute;
	background-color: #bbb;
	border: 0.1vh solid #345;
	left: 50%;
	top: 15%;
	transform: translate(-50%, 0%);
	width: 90%;
	height: 30%;
}

#control_notes:focus {
	outline: none;
}

#pindesc {
	float: right;
	width: 40%;
	margin-top: 3%;
}

#pinCoords {
	display: inline-block;
	width: 40%;
	margin-top: 3%;
}

/* #eva1_breadcrumb_list_panel{
	height: 100%;
    overflow: auto; 
	overflow-x: hidden;
	width: 45.5%;	
	border-right: 0.1vh solid #000000;


	border: 0.1vh solid rgb(27, 167, 41);

} */

/* #eva2_breadcrumb_list_panel{
	height: 100%;

    overflow: auto; 
	overflow-x: hidden;
	width: 45%;

	padding-left: 0.5%;

	border: 0.1vh solid rgb(255, 211, 79);

} */

/* Styling of the list itself */
/* #eva1_breadcrumb_list {
	overflow: auto;
	height: 100%;

	list-style-position: inside; 
    padding-left: 0; 



} */
/* 
#eva2_breadcrumb_list {
	overflow: auto;
	list-style-position: inside;
    padding-left: 5%; 
	height: 100%;

} */

/* List of each breadcrumb item */
/* #eva1_breadcrumb_list li {
	margin-top: 2%;
	font-family: Source Code Pro, Courier;
	font-size: smaller;
	border-bottom: 1px solid black;
} */

/* #eva2_breadcrumb_list li {
	margin-top: 2%;
	font-family: Source Code Pro, Courier;
	font-size: smaller;
	border-bottom: 1px solid black;
} */


#eva1_legend{
	position: sticky;
	width: 50%;
	height: 20px;
	border-bottom: 0.5vh solid rgb(255, 0, 0);
	text-align: center;
	padding-bottom: 8px;
	padding-top: 5px;

	/* background-color: rgb(255, 0, 0); */
	font-weight: 500;
	padding-left: 0; /* Remove default padding */
	background-image: linear-gradient(to top,#627ecb, #38418e);
	/* box-sizing: border-box; */
	/* border-right: 0.1vh solid #000000; */
	/* border: 0.1vh solid rgb(255, 211, 79); */



}


#eva2_legend{
	position: sticky;

	width: 50%;
	height: 20px;
	padding-bottom: 8px;
	padding-top: 5px;


	/* background-color: rgb(0, 68, 255); */
	border-bottom: 0.5vh solid rgb(0, 68, 255);
	font-weight: 500;
	text-align: center;

	padding-left: 0; /* Remove default padding */
	background-image: linear-gradient(to top,#627ecb, #38418e);
/* 
	box-sizing: border-box; 
	border-left: 0.1vh solid #000000; */

	/* border: 0.1vh solid rgb(255, 211, 79); */



}
/* Minimap panel */
#panel_minimap {
	top: 0%;
	right: 0%;
	height: 50%;
	aspect-ratio: 1.07/1;
	background-image: url('/images/rockYardMap_cropped.jpg');
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;

	
}

/* Minimap dot styling */
.mapdot1 {
    position: absolute;
    height: 5px;
    width: 5px;
    background-color: rgb(255, 50, 241);
    border-radius: 50%;
    display: inline-block;
    opacity: 1; /* Default opacity for new dots */
}

.current-dot1 {
    width: 0;
    height: 0;
    /* border-left: 5px solid transparent;
    border-right: 5px solid transparent; */
	border: 0.5vh solid rgb(255, 0, 0);
    border-radius: 0;
    opacity: 1; /* Ensure the current dot is fully opaque */
}


/* Minimap dot styling */
.mapdot2 {
    position: absolute;
    height: 5px;
    width: 5px;
    background-color: rgb(50, 248, 255);
    border-radius: 50%;
    display: inline-block;
    opacity: 1; /* Default opacity for new dots */
}

.current-dot2 {
    width: 0;
    height: 0;
    /* border-left: 5px solid transparent;
    border-right: 5px solid transparent; */
	border: 0.5vh solid rgb(0, 68, 255);
    border-radius: 0;
    opacity: 1; /* Ensure the current dot is fully opaque */
}

/* .mapdot3 {
    position: absolute;
    height: 5px;
    width: 5px;
    background-color: rgb(9, 255, 0);
    border-radius: 50%;
    display: inline-block;
    opacity: 1; 
} */

.pin {
	width: 2px; /* Skinnier pin shaft */
	height: 30px; /* Taller pin for the visual stacking effect */
	background: #00500b;
	position: absolute;
  }
  
  .pin::before {
	content: '';
	width: 0;
	height: 0;
	border-left: 5px solid transparent; /* Creates left half of pin point */
	border-right: 5px solid transparent; /* Creates right half of pin point */
	border-top: 10px solid #96c69c; /* Creates the point of the pin */
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -100%); /* Position the tip */
	z-index: 1;
  }
  
  .pin::after {
	content: '';
	width: 8px; /* Diameter of the pin head */
	height: 8px; /* Diameter of the pin head */
	border-radius: 50%;
	background: #00500b;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -160%); /* Position the circle above the point */
	z-index: 2; /* Higher z-index so the circle is above the point */
  }
  

/* Camera Feed Panel */
#panel_camfeed_1 {
	top: 0%;
	left: 0%;
	height: 50%;
	width: 22%;
	/* background-color: #88c; */
	/* background-image: linear-gradient(to bottom, #33426b, #161c58); */
	background-image: linear-gradient(to bottom right, #33426b, #161c56);
}

#panel_camfeed_2 {
	top: 0%;
	left: 22%;
	height: 50%;
	width: 22%;	
	/* background-color: #88c; */
	/* background-image: linear-gradient(to top, #253254, #161c58); */
	background-image: linear-gradient(to bottom right, #33426b, #161c56);
}

.camfeed_element {
	position: absolute;
	width: 80%;
	height: 80%;
	left: 50%;
	top: 55%;
	background-color: #345;
	border-radius: 2%;
	transform: translate(-50%, -50%);
}

.cam {
	text-align: center;
}


#panel_rover {
	bottom: 0%;
	top: 50%;
	left: 0%;
	height: 50%;
	width: 33.5%;
	/* background-color: #88c; */
	background-image: linear-gradient(45deg ,#293966, #161c56);
}

#panel_rover_lidar {
	bottom: 0%;
	top: 50%;
	left: 33%;
	height: 50%;
	width: 33.5%;
	/* background-color: #88c; */
	background-image: linear-gradient(45deg ,#293966, #161c56);
}



#panel_controlcache {
	top: 0%;
	left: 44%;
	height: 50%;
	width: 23%;
	/* background-color: #88c; */
	background-image: linear-gradient(to bottom right, #33426b, #161c56);
}


#rightClickMenu {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    border-radius: 5px;
    padding: 8px;
    background-color: #f9f9f9;
}

